--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,27 @@
+databases:
+  - name: breatheasy_db
+    databaseName: breatheasy
+    user: breatheasy_user
+    plan: free
+
 services:
   - type: web
-    name: aqi-backend
-    env: python
-    buildCommand: ./build.sh
-    startCommand: gunicorn your_project.wsgi:application --log-file -
+    name: breatheasy-backend
+    runtime: python
+    buildCommand: "./build.sh"
+    startCommand: "gunicorn breatheasy.wsgi:application --log-file -"
     envVars:
-      - key: DATABASE_URL
-        fromDatabase: aqi-db
+      - key: PYTHON_VERSION
+        value: 3.11.0
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
-        value: false
-
-databases:
-  - name: aqi-db
-    plan: free
+        value: "false"
+      - key: ALLOWED_HOSTS
+        value: "*"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: breatheasy_db
+          property: connectionString
+      - key: WEB_CONCURRENCY
+        value: "4"
